dev/static/stylus/pages/index.styl
.index



  &__slider
    margin-bottom: 39px
    overflow: hidden
    padding: 0 20px


    @media $tablet
      margin-bottom: 49px
      padding: 0 30px


    .swiper

      &-container
        width: 100%
        overflow: visible

      &-slide-active

        .article-slider__name
          display: block
        
      &-pagination
        display: flex
        justify-content: center

      &-top-prev
        display: block
        order: -1
        position: relative
        top: -3px
        width: 6px
        height: 10px
        padding: 9px 12px
        background-image: url('../img/svg/slider-prev.svg')
        background-position: center center
        background-repeat: no-repeat
        cursor: pointer

      &-top-next
        position: relative
        top: -3px
        width: 6px
        height: 10px
        padding: 9px 12px
        background-image: url('../img/svg/slider-next.svg')
        background-position: center center
        background-repeat: no-repeat
        cursor: pointer

    .article-slider
      position: relative
      display: block
      box-shadow: 0 2px 12px 2px rgba(0, 0, 0, 0.35)
      filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25))

      @media $tablet
        width: 396px
        margin: 0 auto

      &:hover
        .article-slider__name
          color: $blue

      &__img

        img
          width: 100%
          height: 100%
          object-fit: contain

      &__name
        display: none
        position: absolute
        bottom: 0
        left: 0
        right: 0
        background-color: alpha($white, 0.95)
        box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.22);
        padding: 9px 11px

        font-family: $RobotoSlab
        font-size: 16px
        text-align: center

        span
          text-align: center

      &__label
        position: absolute
        top: 0
        left: 0
        background-color: alpha($black, 0.5)
        padding: 5px 17px

        text-transform: uppercase
        color: $white
        font-size: 14px


  .articles

    &__list

      @media $tablet
        display: flex
        flex-wrap: wrap

    &__item
      margin-bottom: 5px

      @media $tablet
        width: 50%

      &:nth-child(odd)

        @media $tablet
          padding-right: 15px

      &:nth-child(even)

        @media $tablet
          padding-left: 15px

      &:last-child
        margin-bottom: 0

  &__new
    margin-bottom: 64px

    .btn

      @media $tablet
        display: none

  &__popular
    margin-bottom: 64px

    .btn

      @media $tablet
        display: none

  &__useful
    margin-bottom: 72px

    .btn

      @media $tablet
        display: none

    .articles

      &__item

        @media $tablet
          width: 100%
          padding-bottom: 24px
          border-bottom: 1px solid $gray
          margin-bottom: 24px

        &:nth-child(odd)

          @media $tablet
            padding-right: 0

        &:nth-child(even)

          @media $tablet
            padding-left: 0

        &:last-child

          @media $tablet
            margin-bottom: 0

    .article

      @media $tablet
        padding-left: 50%
        position: relative

      &__img

        @media $tablet
          position: absolute
          top: 0
          left: 0
          width: calc(50% - 16px)
          overflow: hidden
          max-height: 200px

        &.opened

          @media $tablet
            height: auto
            //overflow: visible

      &__descr

        @media $tablet
          font-size: 18px

      &__category

        @media $tablet
          margin-bottom: 1px

      &__name

        @media $tablet
          margin-bottom: 1px

      &__descr

        @media $tablet
          height: 110px

        &.opened

          @media $tablet
            height: auto

      &__push

        @media $tablet
          height: 54px
          top: -33px
          margin-bottom: -33px

          &::before

            @media $tablet
              top: auto
              bottom: -5px

  &__rubric
    margin-bottom: 39px

    .swiper-pagination
      padding-top: 32px



  &__heading
    margin-bottom: 32px

    @media $tablet
      display: flex
      justify-content: space-between
      padding-bottom: 8px
      border-bottom: 1px solid $gray

  &__subheading
    display: none

    @media $tablet
      display: block
      font-weight: 600
      font-size: 14px
      line-height: 23px
      text-align: right
      color: $gray3

